--- a/Nivel1-A/Documentos/Guia/guia.tex
+++ b/Nivel1-A/Documentos/Guia/guia.tex
@@ -1,7 +1,7 @@
 \documentclass[a4paper,12pt]{report}
 \input{preamble.tex}
 \usepackage{float}
-%\includeonly{guia5}
+\includeonly{guia1,guia2,apendice1,apendice2}
 \graphicspath{{./figs/}}
 % Renombro lo capitulos
 \addto\captionsspanish{\renewcommand{\chaptername}{Clase}}
